--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "server": "json-server server.json -p 3333 -w -d 500"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.3",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@types/styled-components": "^5.1.34",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.1.2"
+    "react-hook-form": "^7.49.2",
+    "styled-components": "^6.1.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
